--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <body><!-- the body element is where everything we will see on the page will go -->
     <div id="red"></div>
+    <div id="orange"></div>
+    <div id="red"></div>
+    <div id="red"></div>
+
 
     <!-- our soon to be beautiful rainbow! -->
     <div> <!-- the grandest grandparent div -->
