--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body><!-- the body element is where everything we will see on the page will go -->
     <div id="red"></div>
     <div id="orange"></div>
-    <div id="red"></div>
+    <div id="yellow"></div>
     <div id="red"></div>
 
 
