automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="red"></div>
     <div id="orange"></div>
     <div id="yellow"></div>
-    <div id="red"></div>
+    <div id="green"></div>
 
 
     <!-- our soon to be beautiful rainbow! -->
