--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="orange"></div>
     <div id="yellow"></div>
     <div id="green"></div>
-    <div id="bluen"></div>
+    <div id="blue"></div>
 
 
     <!-- our soon to be beautiful rainbow! -->
