automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="yellow"></div>
     <div id="green"></div>
     <div id="blue"></div>
+    <div id="indigo"></div>
+    <div id="violet"></div>
 
 
     <!-- our soon to be beautiful rainbow! -->
